--- a/i3/config
+++ b/i3/config
@@ -151,6 +151,10 @@ bar {
 # Startup
 # --------------------------------------------------------
 
+exec --no-startup-id /usr/lib/gsd-xsettings
+exec_always --no-startup-id gnome-power-manager
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id gnome-flashback
 exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
 exec --no-startup-id xrdb -merge ~/.Xresources
 exec --no-startup-id compton -b --config ~/.compton.conf
