--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -65,7 +65,7 @@ wm-restack = i3
 # Top modules
 top-left = 
 top-center = spotify
-top-right = temperature pulseaudio network-short date
+top-right = cpu temperature pulseaudio network-short date
 
 # Bottom modules
 bottom-left = weather
