--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -11,7 +11,7 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>Fira Code</family>
+      <family>FiraCode Nerd Font</family>
     </prefer>
   </alias>
 </fontconfig>
