a bunch of changes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,14 @@
 include ./catppuccin.conf
 
 # Window configuration
-window_padding_width   2    4
+#window_padding_width   2    4
 
 # Font configuration
+font_family         FiraCode Nerd Font Retina
 font_size           11.0
 disable_ligatures   never
-modify_font         cell_height  +4px
+modify_font         cell_height  150%
+
+# Disable URL highlighting
+detect_urls         no
+underline_hyperlink no
