--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,16 +18,12 @@ set $mod Mod4
 #################                          Define the movements keys - variables                    #################
 #####################################################################################################################
 
+set $up k
+set $down j
+set $left h
+set $right l
 
-#This is setup for qwerty
-set $up l
-set $down k
-set $left j
-set $right semicolon
-
-font pango:OperatorMono Nerd Font 0
-
-
+font pango:Fira Code Nerd Font 8
 
 #####################################################################################################################
 #################                          Single and Dual screen                                   #################
@@ -188,7 +184,7 @@ bindsym $mod+minus scratchpad show
 default_orientation horizontal
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+b split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -288,7 +284,7 @@ for_window [class="^.*"] border pixel 1
 gaps inner 10
 gaps outer 1
 smart_gaps on
-smart_borders on
+#smart_borders on
 
 
 #####################################################################################################################
@@ -354,19 +350,72 @@ exec_always --no-startup-id nitrogen --restore
 
 #exec_always --no-startup-id $HOME/.config/polybar/launch.sh dark
 
-    ##START THEMING WM
+#---- Catppuccin theme start
+set $rosewater #f5e0dc
+set $flamingo  #f2cdcd
+set $pink      #f5c2e7
+set $mauve     #cba6f7
+set $red       #f38ba8
+set $maroon    #eba0ac
+set $peach     #fab387
+set $yellow    #f9e2af
+set $green     #a6e3a1
+set $teal      #94e2d5
+set $sky       #89dceb
+set $sapphire  #74c7ec
+set $blue      #89b4fa
+set $lavender  #b4befe
+set $text      #cdd6f4
+set $subtext1  #bac2de
+set $subtext0  #a6adc8
+set $overlay2  #9399b2
+set $overlay1  #7f849c
+set $overlay0  #6c7086
+set $surface2  #585b70
+set $surface1  #45475a
+set $surface0  #313244
+set $base      #1e1e2e
+set $mantle    #181825
+set $crust     #11111b
 
-    # Window color settings
-    # class                 border  backgr. text    indicator
-    client.focused          #81a1c1 #81a1c1 #ffffff #81a1c1
-    client.unfocused        #2e3440 #1f222d #888888 #1f222d
-    client.focused_inactive #2e3440 #1f222d #888888 #1f222d
-    client.placeholder      #2e3440 #1f222d #888888 #1f222d
-    client.urgent           #900000 #900000 #ffffff #900000
+# target                 title     bg    text   indicator  border
+client.focused           $lavender $base $text  $rosewater $lavender
+client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
+client.unfocused         $overlay0 $base $text  $rosewater $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
+#---- Catppuccin theme end
 
-    client.background       #242424
+  # Nord colors
+  # class                 border  backgr. text    indicator
+  # client.focused          #81a1c1 #81a1c1 #ffffff #81a1c1
+  # client.unfocused        #2e3440 #1f222d #888888 #1f222d
+  # client.focused_inactive #2e3440 #1f222d #888888 #1f222d
+  # client.placeholder      #2e3440 #1f222d #888888 #1f222d
+  # client.urgent           #900000 #900000 #ffffff #900000
+  #
+  # client.background       #242424
 
-    ##STOP THEMING WM
+  ##STOP THEMING WM
+
+bar {
+  tray_output primary
+  status_command i3status-rs
+  position top
+  strip_workspace_numbers yes
+	workspace_min_width 40
+	workspace_buttons yes
+	height 24
+ 	font pango:Fira Code Nerd Font 9
+ 	colors {
+		background $base
+		separator $lavender
+		focused_workspace $overlay0 #302D41 $text
+		active_workspace #1E1E2E #1E1E2E #808080
+  }
+}
+exec --no-startup-id nm-applet --sm-disable
 
 exec xset r rate 300 50 &
 
