--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -172,6 +172,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
+  "80:class_g = 'i3bar'",
   "80:class_g = 'i3-frame'",
   "80:class_g = 'Polybar'",
   "80:class_g = 'kitty'",
@@ -247,8 +248,8 @@ backend = "glx"
 # backend = "xrender";
 
 # Enable/disable VSync.
-vsync = false
-#vsync = true
+#vsync = false
+vsync = true
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -266,8 +267,8 @@ mark-ovredir-focused = true;
 # Try to detect windows with rounded corners and don't consider them 
 # shaped windows. The accuracy is not very high, unfortunately.
 #
-# detect-rounded-corners = false
-detect-rounded-corners = true;
+detect-rounded-corners = false
+# detect-rounded-corners = true;
 
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
