--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,11 @@
+# reload config file
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
+
+# Move status bar to the top
+set-option -g status-position top
+
 # Set true color
+set-option -sa terminal-features ',xterm-kitty:RGB'
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Enable mouse interaction
@@ -20,18 +27,52 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 #set -g @plugin 'arcticicestudio/nord-tmux'
-set -g @plugin 'catpuccin/tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+# copy to system clipboard
 set -g @plugin 'tmux-plugins/tmux-yank'
+# open highlighted files and urls
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # set vi-mode
 set-window-option -g mode-keys vi
 
-# keybindings
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+
+# Resize panes with Shift + alt + vim keys
+bind-key -n M-H resize-pane -L 5
+bind-key -n M-J resize-pane -D 5
+bind-key -n M-K resize-pane -U 5
+bind-key -n M-L resize-pane -R 5
+
+# alternative pane movement shortcuts
+#bind -r h select-pane -L
+#bind -r j select-pane -D
+#bind -r k select-pane -U
+#bind -r l select-pane -R
+
+# alternative pane resize shortcuts
+#bind -r H resize-pane -L 10
+#bind -r J resize-pane -D 10
+#bind -r K resize-pane -U 10
+#bind -r K resize-pane -U 10
+
+# keybindings for tmux-yank
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# SSH agent forwarding (requires script in ~/.ssh/rc) - UNTESTED
+# 
+set-environment -g SSH_AUTH_SOCK ~/.ssh/.ssh_auth_sock
 
 run '~/.tmux/plugins/tpm/tpm'
