--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -11,7 +11,8 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>FiraCode Nerd Font</family>
+      <!-- <family>FiraCode Nerd Font</family> -->
+      <family>JetBrains Mono Nerd Font</family>
     </prefer>
   </alias>
 </fontconfig>
