--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,7 +22,11 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# > hyprctl monitors all
+
+# device, resolution[@refresh], resolution, scale
+monitor=DP-1,highres,0x0,1 # left monitor, horizontal
+monitor=HDMI-A-1,highres,2560x0,1,transform,3 # right monitor, rotated 270 deg
 
 
 ###################
@@ -34,7 +38,6 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = ranger
-$menu = wofi --show drun
 
 
 #################
@@ -45,7 +48,7 @@ $menu = wofi --show drun
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-# exec-once = nm-applet &
+exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
 
@@ -75,7 +78,7 @@ env = WLR_DRM_DEVICES,$HOME/.config/hypr/card
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 5
+    gaps_in = 10
     gaps_out = 20
 
     border_size = 2
@@ -95,11 +98,11 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.95
+    inactive_opacity = 0.8
 
     drop_shadow = true
     shadow_range = 4
@@ -192,20 +195,20 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, E, togglesplit, # dwindle
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Vim keys for navigation
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
