use fuzzel as a wayland-compatible launcher

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,6 +27,7 @@
 # device, resolution[@refresh], resolution, scale
 monitor=DP-1,highres,0x0,1 # left monitor, horizontal
 monitor=HDMI-A-1,highres,2560x0,1,transform,3 # right monitor, rotated 270 deg
+#source = $HOME/.config/hypr/monitors.conf
 
 
 ###################
@@ -38,6 +39,7 @@ monitor=HDMI-A-1,highres,2560x0,1,transform,3 # right monitor, rotated 270 deg
 # Set programs that you use
 $terminal = kitty
 $fileManager = ranger
+$menu = fuzzel
 
 
 #################
