hyprland waybar and theme setup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,6 +16,7 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+source = ~/.config/hypr/mocha.conf
 
 ################
 ### MONITORS ###
@@ -27,7 +28,6 @@
 # device, resolution[@refresh], resolution, scale
 monitor=DP-1,highres,0x0,1 # left monitor, horizontal
 monitor=HDMI-A-1,highres,2560x0,1,transform,3 # right monitor, rotated 270 deg
-#source = $HOME/.config/hypr/monitors.conf
 
 
 ###################
@@ -50,9 +50,10 @@ $menu = fuzzel
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-
+exec-once = hyprpaper &
+exec-once = sh "$HOME/devel/dotfiles/.config/hypr/scripts/launch-waybar.sh"
+exec-once = nm-applet & blueman-applet &
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -80,14 +81,14 @@ env = WLR_DRM_DEVICES,$HOME/.config/hypr/card
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 10
-    gaps_out = 20
-
     border_size = 2
 
+    gaps_in = 5
+    gaps_out = 20
+
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $surface2
+    col.inactive_border = $overlay0
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false 
@@ -103,13 +104,16 @@ decoration {
     rounding = 0
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.95
-    inactive_opacity = 0.8
+    active_opacity = 0.98
+    inactive_opacity = 0.93
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
+    shadow_ignore_window = 3
+    shadow_ignore_window = true
     col.shadow = rgba(1a1a1aee)
+
+    # dimming
+    dim_inactive = false
+    dim_strength = 0.5
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -206,11 +210,18 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, E, togglesplit, # dwindle
 
-# Vim keys for navigation
+# -- Vim bindings --
+# navigation
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+# move
+bind = SUPER_SHIFT, H, movewindow, l
+bind = SUPER_SHIFT, L, movewindow, r
+bind = SUPER_SHIFT, K, movewindow, u
+bind = SUPER_SHIFT, J, movewindow, d
+
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
