--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -8,66 +8,52 @@
 # Sets user-defined palette
 palette = "catppuccin_mocha"
 
-# Setups
-format = "$directory$git_branch$character"
-right_format = """$git_status$cmd_duration"""
-add_newline = false
-
-# Other languages configurations:
-c.disabled = true
-cmake.disabled = true
-haskell.disabled = true
-python.disabled = true
-ruby.disabled = true
-rust.disabled = true
-perl.disabled = true
-package.disabled = true
-lua.disabled = true
-nodejs.disabled = true
-java.disabled = true
-golang.disabled = true
-
-[conda]
-format = ' [$symbol$environment](dimmed green) '
-
-# Prompt symbols 
-[character]
-success_symbol = "[](green bold)"
-error_symbol = "[](pink)"
-#vicmd_symbol = "[](peach)"
+format = """
+$username\
+$hostname\
+$directory\
+$git_branch\
+$git_state\
+$git_status\
+$cmd_duration\
+$line_break\
+$python\
+$character"""
 
 [directory]
-format = "[]($style)[ ](bg:base fg:pink)[$path](bg:base fg:lavender bold)[ ]($style)"
-style = "bg:none fg:base"
-truncation_length = 3
-truncate_to_repo = false
+style = "blue"
+
+[character]
+success_symbol = "[❯](purple)"
+error_symbol = "[❯](red)"
+vimcmd_symbol = "[❮](green)"
 
 [git_branch]
-format = "[]($style)[[ ](bg:base fg:green bold)$branch](bg:base fg:lavender)[ ]($style)"
-style = "bg:none fg:base"
+format = "[$branch]($style)"
+style = "bright-black"
 
 [git_status]
-# $all status$ahead_behind
-format = "[]($style)[$all_status$ahead_behind](bg:base fg:yellow)[ ]($style)"
-style = "bg:none fg:base"
-conflicted = "="
-ahead = "⇡${count}"
-behind = "⇣${count}"
-diverged = "⇕⇡${ahead_count}⇣${behind_count}"
-up_to_date = ""
-untracked = "?${count}"
-stashed = ""
-modified = "!${count}"
-staged = "+${count}"
-renamed = "»${count}"
-deleted = "${count}"
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+style = "cyan"
+conflicted = "​"
+untracked = "​"
+modified = "​"
+staged = "​"
+renamed = "​"
+deleted = "​"
+stashed = "≡"
+
+[git_state]
+format = '\([$state( $progress_current/$progress_total)]($style)\) '
+style = "bright-black"
 
 [cmd_duration]
-min_time = 1
-# duration & style 
-format = "[]($style)[[神](bg:base fg:flamingo bold)$duration](bg:base fg:text)[ ]($style)"
-disabled = false
-style = "bg:none fg:base"
+format = "[$duration]($style) "
+style = "yellow"
+
+[python]
+format = "[$virtualenv]($style) "
+style = "bright-black"
 
 [palettes.catppuccin_mocha]
 rosewater = "#f5e0dc"
