--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,7 +53,7 @@ $menu = fuzzel
 exec-once = hyprpaper &
 exec-once = sh "$HOME/devel/dotfiles/.config/hypr/scripts/launch-waybar.sh"
 exec-once = nm-applet & blueman-applet &
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -61,6 +61,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
