tmux config updates

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,6 +6,7 @@ set-option -g status-position top
 
 # Set true color
 set-option -sa terminal-features ',xterm-kitty:RGB'
+set-option -as terminal-overrides ",alacritty*:Tc"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Enable mouse interaction
@@ -20,16 +21,12 @@ bind C-Space send-prefix
 bind -n M-H previous-window
 bind -n M-L next-window
 
-# Start windows and panes at 1, not 0
-set -g base-index 1
-set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
-
 #set -g @plugin 'arcticicestudio/nord-tmux'
-set -g @plugin 'catppuccin/tmux'
+#set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'TanglingTreats/tmux-everforest' # Adds to the list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # copy to system clipboard
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -38,6 +35,12 @@ set -g @plugin 'tmux-plugins/tmux-open'
 
 # set vi-mode
 set-window-option -g mode-keys vi
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -70,9 +73,5 @@ bind-key -n M-L resize-pane -R 5
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
-# SSH agent forwarding (requires script in ~/.ssh/rc) - UNTESTED
-# 
-set-environment -g SSH_AUTH_SOCK ~/.ssh/.ssh_auth_sock
 
 run '~/.tmux/plugins/tpm/tpm'
