--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -6,7 +6,7 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 # Sets user-defined palette
-palette = "catppuccin_mocha"
+#palette = "catppuccin_mocha"
 
 format = """
 $username\
