update tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -26,6 +26,7 @@ bind -n M-L next-window
 set -g @plugin 'TanglingTreats/tmux-everforest' # Adds to the list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # copy to system clipboard
@@ -41,6 +42,10 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+
+# Split panes in the current directory
+bind-key '"' split-window -h -c "#{pane_current_path}"
+bind-key % split-window -c "#{pane_current_path}"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
