--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -34,6 +34,9 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # open highlighted files and urls
 set -g @plugin 'tmux-plugins/tmux-open'
 
+# enable restoring previous sessions
+set -g @continuum-restore 'on'
+
 # set vi-mode
 set-window-option -g mode-keys vi
 
