fix split keybinds

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -47,8 +47,8 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Split panes in the current directory
-bind-key '"' split-window -h -c "#{pane_current_path}"
-bind-key % split-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -c "#{pane_current_path}"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
