hyprland config updates for everforest and lceanup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,8 +16,6 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
-source = ~/.config/hypr/mocha.conf
-
 ################
 ### MONITORS ###
 ################
@@ -27,7 +25,7 @@ source = ~/.config/hypr/mocha.conf
 
 # device, resolution[@refresh], resolution, scale
 monitor=DP-1,highres,0x0,1 # left monitor, horizontal
-monitor=HDMI-A-1,highres,2560x0,1,transform,3 # right monitor, rotated 270 deg
+monitor=HDMI-A-1,highres,2560x-650,1,transform,3 # right monitor, rotated 270 deg
 
 
 ###################
@@ -39,7 +37,7 @@ monitor=HDMI-A-1,highres,2560x0,1,transform,3 # right monitor, rotated 270 deg
 # Set programs that you use
 $terminal = kitty
 $fileManager = ranger
-$menu = fuzzel
+$menu = $HOME/.config/rofi/bin/launcher
 
 
 #################
@@ -51,7 +49,7 @@ $menu = fuzzel
 
 # exec-once = $terminal
 exec-once = hyprpaper &
-exec-once = sh "$HOME/devel/dotfiles/.config/hypr/scripts/launch-waybar.sh"
+exec-once = sh "$HOME/dotfiles/.config/hypr/scripts/launch-waybar.sh"
 exec-once = nm-applet & blueman-applet &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
@@ -62,6 +60,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
+
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
@@ -249,8 +248,10 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, F, togglespecialworkspace, magic
+bind = $mainMod SHIFT, F, movetoworkspace, special:magic
+
+bind = $mainMod, S, togglegroup
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -260,6 +261,9 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Screenshot
+bind = $mainMod, Z, exec, hyprshot --mode window
+bind = $mainMod SHIFT, Z, exec, hyprshot --mode region
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
