--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,8 +23,8 @@ bind -n M-L next-window
 
 #set -g @plugin 'arcticicestudio/nord-tmux'
 #set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'TanglingTreats/tmux-everforest' # Adds to the list of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'TanglingTreats/tmux-everforest'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
