prevent gap at top if full character doesnt fit

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,6 +3,9 @@ include ./themes/everforest.conf
 # Window configuration
 #window_padding_width   2    4
 
+# Window layout
+placement_strategy   top
+
 # Font configuration
 font_size           11.0
 disable_ligatures   never
