update monitor configuration

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@
 
 # device, resolution[@refresh], resolution, scale
 monitor=DP-1,highres,0x0,1 # left monitor, horizontal
-monitor=HDMI-A-1,highres,2560x-650,1,transform,3 # right monitor, rotated 270 deg
+monitor=DP-2,highres,2560x-650,1,transform,3 # right monitor, rotated 270 deg
 
 
 ###################
