--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -12,7 +12,8 @@
     <family>monospace</family>
     <prefer>
       <!-- <family>FiraCode Nerd Font</family> -->
-      <family>JetBrains Mono Nerd Font</family>
+      <!-- <family>JetBrains Mono Nerd Font</family> -->
+      <family>Mononoki Nerd Font</family>
     </prefer>
   </alias>
 </fontconfig>
