--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,1 +1,6 @@
-preload = ~/devel/dotfiles/.wallpapers/gits.png
+preload = ~/.wallpaper/gits.png
+
+wallpaper = DP-1,~/.wallpaper/gits.png
+wallpaper = DP-2,~/.wallpaper/gits.png
+
+splash = false
