--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,8 +14,11 @@
   diffFilter = delta --color-only
 
 [delta]
+  features = side-by-side line-numbers decorations
+  syntax-theme = everforest-dark # this pulls from the bat theme cache
   navigate = true  # use n and N to move between diff sections
   dark = true
+  hyperlinks = true
 
 [merge]
   conflictstyle = zdiff3
