dont make stremio transparent

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -290,4 +290,7 @@ bind = $mainMod SHIFT, Z, exec, hyprshot --mode region
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+# Stremio opacity override - keep at full opacity even when inactive
+windowrulev2 = opacity 1.0 override, class:^(com.stremio.stremio)$
+
 
