--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -49,14 +49,16 @@ $menu = $HOME/.config/rofi/bin/launcher
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec-once = hyprpaper &
 #exec-once = sh "$HOME/dotfiles/.config/hypr/scripts/launch-waybar.sh"
 exec-once = waybar &
 exec-once = nm-applet & blueman-applet &
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # Ensure xdg-desktop-portal-hyprland can get the required environment variables
 # https://gist.github.com/brunoanc/2dea6ddf6974ba4e5d26c3139ffb7580#editing-the-configuration-file
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# Replaced with systemctl --user enable --now hyprpaper.service
+#exec-once = hyprpaper &
+# Replaced with systemctl --user enable --now hyprpolkitagent.service
+#exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 #############################
 ### ENVIRONMENT VARIABLES ###
